Velcro test First SandBox/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Programs__c</fullName>
        <label>Programs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reseller Program</fullName>
                </value>
                <value>
                    <fullName>Services Program</fullName>
                </value>
                <value>
                    <fullName>Referral Program</fullName>
                </value>
                <value>
                    <fullName>Worldwide Reseller Agreement</fullName>
                </value>
                <value>
                    <fullName>Consulting Program</fullName>
                </value>
                <value>
                    <fullName>Distributor Program</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote_Provided_Date__c</fullName>
        <label>&lt;font color=&apos;Blue&apos;&gt;Quote Provided Date</label>
        <summarizedField>Opportunity.Quote_Provided__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rebate_Terms__c</fullName>
        <description>EMEA-only field</description>
        <label>Rebate Terms?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Not Discussed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referral_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referral Campaign</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.RecordTypeId</field>
                <operation>equals</operation>
                <value>Referrals</value>
            </filterItems>
            <filterItems>
                <field>Campaign.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>SELECT THE APPROPRIATE REFERRAL CAMPAIGN FOR THE DISTRIBUTOR YOU ARE REFERRING THIS ACCOUNT TO.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <inlineHelpText>The region of the account.</inlineHelpText>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Returns_Allowances_FY_Forecast__c</fullName>
        <inlineHelpText>The Returns &amp; Allowances forecasted for the Full Year</inlineHelpText>
        <label>Returns &amp; Allowances FY Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Potential__c</fullName>
        <inlineHelpText>The annual revenue potential for the account.</inlineHelpText>
        <label>Revenue Potential</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RollUpConverted__c</fullName>
        <formula>RollUpUSD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RollUpConverted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RollUpUSD__c</fullName>
        <label>RollUpUSD</label>
        <summarizedField>Opportunity.USDasNumber__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Roll_Up_Closed_Won__c</fullName>
        <formula>Roll_up_Closed_Won_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Roll Up Closed Won</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Roll_Up_Ready_for_Closure__c</fullName>
        <formula>Roll_up_Ready_for_Closure_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Roll Up Ready for Closure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Roll_up_Closed_Won_Amount__c</fullName>
        <label>Roll-up Closed Won Amount</label>
        <summarizedField>Opportunity.Closed_Won_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.CloseDate</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2015</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.CloseDate</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2016</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Roll_up_Committed_Amount__c</fullName>
        <label>Roll-up Committed Amount</label>
        <summarizedField>Opportunity.Committed_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.CloseDate</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2015</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.CloseDate</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2016</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Roll_up_Committed__c</fullName>
        <formula>Roll_up_Committed_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Roll up Committed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Roll_up_Developing_Amount__c</fullName>
        <label>Roll-up Developing Amount</label>
        <summarizedField>Opportunity.Developing_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.CloseDate</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2015</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.CloseDate</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2016</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Roll_up_Developing__c</fullName>
        <formula>Roll_up_Developing_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Roll up Developing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Roll_up_Negotiating_Amount__c</fullName>
        <label>Roll-up Negotiating Amount</label>
        <summarizedField>Opportunity.Negotiating_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.CloseDate</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2015</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.CloseDate</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2016</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Roll_up_Negotiating__c</fullName>
        <formula>Roll_up_Negotiating_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Roll up Negotiating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Roll_up_Qualifying_Amount__c</fullName>
        <inlineHelpText>The total USD value of all opportunities in a Qualifying Status.</inlineHelpText>
        <label>Roll-up Qualifying Amount</label>
        <summarizedField>Opportunity.Qualifying_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.CloseDate</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2015</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.CloseDate</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2016</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Roll_up_Qualifying__c</fullName>
        <formula>Roll_up_Qualifying_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Roll up Qualifying</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Roll_up_Ready_for_Closure_Amount__c</fullName>
        <label>Roll-up Ready for Closure Amount</label>
        <summarizedField>Opportunity.Ready_For_Closure_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.CloseDate</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2015</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.CloseDate</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2016</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SBU__c</fullName>
        <inlineHelpText>Strategic Business Unit</inlineHelpText>
        <label>SBU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Personal Care</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Packaging</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Total Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Rep_2018__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>EMEA: Old Sales rep of the account in 2018</description>
        <inlineHelpText>EMEA: Old Sales rep of the account in 2018</inlineHelpText>
        <label>Sales Rep 2018</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SalesRep2018User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <description>EMEA-only field.</description>
        <inlineHelpText>Populated from Oracle.</inlineHelpText>
        <label>Sales Rep</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesforceID__c</fullName>
        <description>Populate Id to use by external systems</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesforce ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scorecard_Last_Updated__c</fullName>
        <label>Scorecard Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Show_Partner_Users__c</fullName>
        <formula>HYPERLINK(&quot;/servlet/servlet.Integration?lid=01N500000000f98&amp;eid=&quot; &amp; Id &amp; &quot;&amp;ic=1&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01550000000KLvV&quot;, &quot;Show Partner Users&quot;),&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show Partner Users</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <inlineHelpText>Address other than shipping and billing address (such as headquarters or purchasing location)</inlineHelpText>
        <label>State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategic__c</fullName>
        <description>Indicates if this is an EMEA Strategic Account</description>
        <inlineHelpText>Is this an EMEA Strategic Account ? ( Y, N )</inlineHelpText>
        <label>Strategic</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Forms__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Relevant Tax Forms are Completed and Attached</inlineHelpText>
        <label>&lt;font color=&apos;Blue&apos;&gt;Tax Forms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Temp_Category_Fix__c</fullName>
        <formula>Category__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Temp Category Fix</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_50__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This account has been identified as a Top 50 Account for the current FY</inlineHelpText>
        <label>Top 50</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Available_Spend__c</fullName>
        <inlineHelpText>The total wallet share of the prospect or customer.</inlineHelpText>
        <label>Total Available Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Current_Year_Pipeline__c</fullName>
        <formula>Open_Orders__c +  Roll_up_Qualifying__c +  Roll_up_Developing__c +  Roll_up_Negotiating__c  +  Roll_up_Committed__c +  Roll_Up_Ready_for_Closure__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Current Year Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Sales_Report__c</fullName>
        <description>Holds the sum of :
Actual_YTD_Gross_Sales__c  +  Previous_FY_Gross_Sales__c</description>
        <formula>Actual_YTD_Gross_Sales__c +  Previous_FY_Gross_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The SUM of Actual YTD Gross Sales + Previous FY Gross Sales</inlineHelpText>
        <label>Total Sales Report</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Use_Secondary_Territory__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the account is in the secondary territory, check this box.</inlineHelpText>
        <label>Use Secondary Territory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Value_Closed_Won_Opportunties__c</fullName>
        <label>Value Closed Won Opportunties</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value_Open_Opportunties__c</fullName>
        <label>Value Open Opportunties</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vertical_Coverage__c</fullName>
        <label>Vertical Coverage</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Biotechnology</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Food &amp; Beverage</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Machinery</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Not For Profit</fullName>
                </value>
                <value>
                    <fullName>Recreation</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Telecommunications</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Utilities</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Width__c</fullName>
        <label>Width</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YTD_Gross_to_Budget_Variance__c</fullName>
        <formula>Actual_YTD_Gross_Sales__c  -  Gross_Budget_YTD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD Gross to Budget Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_Revenue_Generated__c</fullName>
        <label>YTD Revenue Generated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_1_Forecast__c</fullName>
        <label>Year 1 Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_2_Forecast__c</fullName>
        <label>Year 2 Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_3_Forecast__c</fullName>
        <label>Year 3 Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ltnadptn__Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Reps_Trained__c</fullName>
        <label>% of Reps Trained</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <listViews>
        <fullName>Accounts_VBRZ</fullName>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Oracle_Account_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Lamartine,Lisiane,Joselito,Luiz Paulo,Emilio</value>
        </filters>
        <label>Accounts VBRZ</label>
        <sharedTo>
            <role>LATAM_Executive</role>
            <role>LATAM_Operations_Director</role>
            <role>VBRZ_Customer_Service_Manager</role>
            <role>VBRZ_Customer_Service_Rep</role>
            <role>VBRZ_Operations_Manager</role>
            <role>VBRZ_Sales</role>
            <role>VBRZ_Sales_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Accounts_VDM</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.CURRENCY_ISO_CODE</columns>
        <columns>ACCOUNT.SALES</columns>
        <columns>Key_Account__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>Geo_Region__c</columns>
        <columns>Org__c</columns>
        <columns>Region__c</columns>
        <columns>Actual_YTD_Gross_Sales__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>contains</operation>
            <value>Marco,Thalia,Alejandra,Nydia,Ernesto</value>
        </filters>
        <label>Accounts VDM</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>All_PC_Accounts</fullName>
        <columns>Org__c</columns>
        <columns>Actual_YTD_Gross_Sales__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>Account_Territory__c</columns>
        <columns>Oracle_Territory__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SBU__c</field>
            <operation>equals</operation>
            <value>Personal Care</value>
        </filters>
        <label>All PC Accounts</label>
        <sharedTo>
            <role>EMEA_IT_System_Administration</role>
            <role>Personal_Care_GBUM</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEAAccounts</fullName>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Org__c</field>
            <operation>equals</operation>
            <value>ABE,APL,VESA,VGMBH,VIF,VEIT</value>
        </filters>
        <label>EMEA Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyAccountsPostalCode</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Inactive__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>My Accounts By Postal Code</label>
    </listViews>
    <listViews>
        <fullName>NAM_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>SBU__c</columns>
        <columns>Region__c</columns>
        <columns>Org__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>Open_Orders__c</columns>
        <columns>Top_50__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Org__c</field>
            <operation>contains</operation>
            <value>VUSA,VCI</value>
        </filters>
        <label>NAM Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <group>NAM_CRS</group>
            <group>NAM_Inside_Sales</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Customer_Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>VAUS_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Oracle_Account_Id__c</field>
            <operation>contains</operation>
            <value>VAUS</value>
        </filters>
        <label>VAUS Accounts</label>
        <sharedTo>
            <role>AUS_F_A_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>VCHN_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Oracle_Account_Id__c</field>
            <operation>contains</operation>
            <value>VCHN</value>
        </filters>
        <label>VCHN Accounts</label>
        <sharedTo>
            <role>AUS_F_A_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>VHK_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Oracle_Account_Id__c</field>
            <operation>contains</operation>
            <value>VHK</value>
        </filters>
        <label>VHK Accounts</label>
        <sharedTo>
            <role>AUS_F_A_Manager</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>APAC_Customer</fullName>
        <active>true</active>
        <label>APAC Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>APAC_Non_Customer</fullName>
        <active>true</active>
        <label>APAC Non-Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer</fullName>
        <active>true</active>
        <description>Customer - accounts integrated with Oracle</description>
        <label>Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>EMEA_Customer</fullName>
        <active>true</active>
        <description>Customer - accounts integrated with Oracle</description>
        <label>EMEA Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>EMEA_Inactive_Customer</fullName>
        <active>true</active>
        <description>EMEA Inactive customer as per Oracle&apos;s data</description>
        <label>EMEA Inactive Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>EMEA_Non_Customer</fullName>
        <active>true</active>
        <description>Prospect Customers, Partners and Competitors - does not exist in Oracle</description>
        <label>EMEA Non-Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>LATAM_Customers</fullName>
        <active>true</active>
        <description>Customer - accounts integrated with Oracle</description>
        <label>LATAM Customers</label>
    </recordTypes>
    <recordTypes>
        <fullName>LATAM_Non_Customers</fullName>
        <active>true</active>
        <description>Prospect Customers, Partners and Competitors - does not exist in Oracle</description>
        <label>LATAM Non-Customers</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_Customer</fullName>
        <active>true</active>
        <description>Prospect Customers, Partners and Competitors - does not exist in Oracle</description>
        <label>Non-Customer</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>EMEA_Org_values</fullName>
        <active>true</active>
        <description>Allows to use only a given set of values for EMEA Org field</description>
        <errorConditionFormula>IF 
(CASE(UPPER(Org__c),
&apos;ABE&apos;,0,
&apos;APL&apos;,0,
&apos;VGMBH&apos;,0,
&apos;VESA&apos;,0,
&apos;VLTD&apos;,0,
&apos;VIF&apos;,0,
&apos;VEIT&apos;,0,
&apos;&apos;,0,
1)=0, false,true)  &amp;&amp; 
(RecordType.Name =&apos;EMEA Non-Customer&apos; )</errorConditionFormula>
        <errorMessage>The Org field for EMEA must be only one of the following:
ABE , APL , VGmbH, VESA, VIF , VEIT , VLtd</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LID__Check_CompanyId_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBU_Required</fullName>
        <active>true</active>
        <description>An SBU is required to save a customer or prospect account.</description>
        <errorConditionFormula>AND(OR(ISPickVal(Type,&quot;Customer&quot;),ISPickVal(Type,&quot;Prospect&quot;)), ISPickVal(SBU__c ,&quot;&quot;))</errorConditionFormula>
        <errorDisplayField>SBU__c</errorDisplayField>
        <errorMessage>If the account is a customer or prospect, an SBU must be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>valProspectRequiresSBU</fullName>
        <active>true</active>
        <description>A prospect account must enter an SBU</description>
        <errorConditionFormula>AND( ISPICKVAL( SBU__c , &quot;&quot;) ,  ISPICKVAL(Type, &quot;Prospect&quot;)  )</errorConditionFormula>
        <errorMessage>A prospect account must have an SBU.</errorMessage>
    </validationRules>
</CustomObject>